--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="res"/>
+	<classpathentry kind="lib" path="lib/json-20160810.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
